crates/picante/tests/ui/tracked_no_generic.stderr
error: picante: #[picante::tracked] requires a generic DB param, e.g. `fn foo<DB: ...>(db: &DB, ...)`
 --> tests/ui/tracked_no_generic.rs:1:1
  |
1 | #[picante::tracked]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `picante::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
