crates/picante/tests/ui/tracked_no_generic.rs
#[picante::tracked]
pub async fn foo(db: &DB) -> u64 {
    let _ = db;
    0
}

fn main() {}
